// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator Component Test should render Calculation 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <h4>
          Lets do some math!
        </h4>
        <div
          class="calc"
        >
          <div
            class="screen"
          >
            0
          </div>
          <div
            class="operation"
          >
            <div>
              <button
                type="button"
                value="÷"
              >
                ÷
              </button>
              <button
                type="button"
                value="x"
              >
                x
              </button>
              <button
                type="button"
                value="-"
              >
                -
              </button>
              <button
                type="button"
                value="+"
              >
                +
              </button>
              <button
                type="button"
                value="="
              >
                =
              </button>
            </div>
          </div>
          <div
            class="operand"
          >
            <div>
              <button
                type="button"
                value="AC"
              >
                AC
              </button>
              <button
                type="button"
                value="±"
              >
                +/-
              </button>
              <button
                type="button"
                value="%"
              >
                %
              </button>
              <button
                type="button"
                value="7"
              >
                7
              </button>
              <button
                type="button"
                value="8"
              >
                8
              </button>
              <button
                type="button"
                value="9"
              >
                9
              </button>
              <button
                type="button"
                value="4"
              >
                4
              </button>
              <button
                type="button"
                value="5"
              >
                5
              </button>
              <button
                type="button"
                value="6"
              >
                6
              </button>
              <button
                type="button"
                value="1"
              >
                1
              </button>
              <button
                type="button"
                value="2"
              >
                2
              </button>
              <button
                type="button"
                value="3"
              >
                3
              </button>
              <button
                type="button"
                value="0"
              >
                0
              </button>
              <button
                type="button"
              >
                 
              </button>
              <button
                type="button"
                value="."
              >
                .
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <h4>
        Lets do some math!
      </h4>
      <div
        class="calc"
      >
        <div
          class="screen"
        >
          0
        </div>
        <div
          class="operation"
        >
          <div>
            <button
              type="button"
              value="÷"
            >
              ÷
            </button>
            <button
              type="button"
              value="x"
            >
              x
            </button>
            <button
              type="button"
              value="-"
            >
              -
            </button>
            <button
              type="button"
              value="+"
            >
              +
            </button>
            <button
              type="button"
              value="="
            >
              =
            </button>
          </div>
        </div>
        <div
          class="operand"
        >
          <div>
            <button
              type="button"
              value="AC"
            >
              AC
            </button>
            <button
              type="button"
              value="±"
            >
              +/-
            </button>
            <button
              type="button"
              value="%"
            >
              %
            </button>
            <button
              type="button"
              value="7"
            >
              7
            </button>
            <button
              type="button"
              value="8"
            >
              8
            </button>
            <button
              type="button"
              value="9"
            >
              9
            </button>
            <button
              type="button"
              value="4"
            >
              4
            </button>
            <button
              type="button"
              value="5"
            >
              5
            </button>
            <button
              type="button"
              value="6"
            >
              6
            </button>
            <button
              type="button"
              value="1"
            >
              1
            </button>
            <button
              type="button"
              value="2"
            >
              2
            </button>
            <button
              type="button"
              value="3"
            >
              3
            </button>
            <button
              type="button"
              value="0"
            >
              0
            </button>
            <button
              type="button"
            >
               
            </button>
            <button
              type="button"
              value="."
            >
              .
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Home Component Test should render Home DOM 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main>
        <h4
          class="h4"
        >
          Welcome to our Page!
        </h4>
        <p
          class="pa"
        >
          Mathematics as an expression of the human mind reflects the active will, the contemplative reason, and the desire for aesthetic perfection. Its basic elements are logic and intuition, analysis and construction, generality and individuality.
        </p>
        <p
          class="pa"
        >
          One of the most amazing things about mathematics is the people who domath aren't usually interested in application, because mathematics itself is truly a beautiful art form. It's structures and patterns,and that's what we love, and that's what we get off on.
        </p>
      </main>
    </div>
  </body>,
  "container": <div>
    <main>
      <h4
        class="h4"
      >
        Welcome to our Page!
      </h4>
      <p
        class="pa"
      >
        Mathematics as an expression of the human mind reflects the active will, the contemplative reason, and the desire for aesthetic perfection. Its basic elements are logic and intuition, analysis and construction, generality and individuality.
      </p>
      <p
        class="pa"
      >
        One of the most amazing things about mathematics is the people who domath aren't usually interested in application, because mathematics itself is truly a beautiful art form. It's structures and patterns,and that's what we love, and that's what we get off on.
      </p>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Quote Component Test should render Quote on the DOM 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="maincontainer"
      >
        <p
          class="par"
        >
          Mathematics is not about 
          <span
            style="background: rgb(218, 51, 17);"
          >
            numbers
          </span>
          ,
           
          <span
            style="background: rgb(218, 51, 17);"
          >
            equations
          </span>
          ,
           
          <span
            style="background: rgb(218, 51, 17);"
          >
            computations
          </span>
           , or 
          <span
            style="background: rgb(218, 51, 17);"
          >
            algorithms
          </span>
          ; it is about understanding. __ William Paul Thurston
        </p>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="maincontainer"
    >
      <p
        class="par"
      >
        Mathematics is not about 
        <span
          style="background: rgb(218, 51, 17);"
        >
          numbers
        </span>
        ,
         
        <span
          style="background: rgb(218, 51, 17);"
        >
          equations
        </span>
        ,
         
        <span
          style="background: rgb(218, 51, 17);"
        >
          computations
        </span>
         , or 
        <span
          style="background: rgb(218, 51, 17);"
        >
          algorithms
        </span>
        ; it is about understanding. __ William Paul Thurston
      </p>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
